--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oyx124515's Home Page</title>
+    <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
+
 <body>
-    this is my home page
+    <header class="main-header">
+        oyx124515's homepage
+        <br />
+        <br />
+        A GRADUATE STUDENT
+        <br />
+        Research Direction: NLP
+
+    </header>
+
+    <div class="content">
+        <p>
+            I am a graduate student studying natural language processing. Prior to this, my undergraduate studies mainly
+            focused on website development, backend development, and computer server operation and maintenance. My
+            current main job is to learn machine learning and some mathematical knowledge. I want to use more
+            mathematical and statistical methods to make neural networks have better parameters and architecture design
+            to achieve better results, and to make them more interpretable.
+            <br />
+        </p>
+        <h2>Some Project</h2>
+        <br />
+        <p>
+        <h3>1.project management system</h3>
+        <br />
+        This is a small project management system built using Spirngboot and Vue, mainly aimed at software project
+        management. Having multiple roles and permission controls for software development allows each role in the
+        software development process to more effectively submit development documents and code.
+        </p>
+        <p>
+        <h3>2.image classification </h3>
+        <br />
+        As shown at the top of my homepage, my research direction is natural language processing. But it does sound
+        weird, I did create an image classification system or something and deployed it on my phone. Of course, I
+        currently do not have the ability to create a highly accurate network (which is able to publish papers proving
+        the effectiveness of a certain image classification network). I used ResNet50 to fine tune a network on the
+        dataset I collected, and due to the limited number of datasets, the accuracy was quite good. Of course, I also
+        used some mathematical methods and tools to evaluate the accuracy of neural networks, and some interesting
+        methods to explain this neural network.
+        </p>
+    </div>
+
 </body>
+
 </html>
